After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 657849 - gnome-settings-daemon crashed with SIGSEGV in g_bit_lock()
gnome-settings-daemon crashed with SIGSEGV in g_bit_lock()
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: housekeeping
3.1.x
Other Linux
: Normal critical
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-08-31 18:26 UTC by Pedro Villavicencio
Modified: 2011-09-01 09:45 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2



Description Pedro Villavicencio 2011-08-31 18:26:48 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/gnome-settings-daemon/+bug/837610

"happens a few seconds after booting"

".

Thread 1 (Thread 0x7f659cd14940 (LWP 1439))

  • #0 g_bit_lock
    at /build/buildd/glib2.0-2.29.16/./glib/gbitlock.c line 217
  • #1 g_variant_ref_sink
    at /build/buildd/glib2.0-2.29.16/./glib/gvariant-core.c line 687
  • #2 g_variant_new_strv
    at /build/buildd/glib2.0-2.29.16/./glib/gvariant.c line 1352
  • #3 g_settings_set_strv
    at /build/buildd/glib2.0-2.29.16/./gio/gsettings.c line 2073
  • #4 ignore_check_button_toggled_cb
    at gsd-ldsm-dialog.c line 181
  • #5 g_closure_invoke
    at /build/buildd/glib2.0-2.29.16/./gobject/gclosure.c line 773
  • #6 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3271
  • #7 g_signal_emit_valist
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3002
  • #8 g_signal_emit
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3059
  • #9 gtk_toggle_button_clicked
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtktogglebutton.c line 645
  • #10 g_closure_invoke
    at /build/buildd/glib2.0-2.29.16/./gobject/gclosure.c line 773
  • #11 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3201
  • #12 g_signal_emit_valist
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3002
  • #13 g_signal_emit
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3059
  • #14 gtk_toggle_button_released
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtktogglebutton.c line 630
  • #15 gtk_toggle_button_released
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtktogglebutton.c line 623
  • #16 g_closure_invoke
    at /build/buildd/glib2.0-2.29.16/./gobject/gclosure.c line 773
  • #17 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3201
  • #18 g_signal_emit_valist
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3002
  • #19 g_signal_emit
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3059
  • #20 gtk_button_button_release
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtkbutton.c line 1718
  • #21 gtk_button_button_release
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtkbutton.c line 1710
  • #22 _gtk_marshal_BOOLEAN__BOXED
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtkmarshalers.c line 85
  • #23 g_closure_invoke
    at /build/buildd/glib2.0-2.29.16/./gobject/gclosure.c line 773
  • #24 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3309
  • #25 g_signal_emit_valist
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3012
  • #26 g_signal_emit
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3059
  • #27 gtk_widget_event_internal
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtkwidget.c line 6126
  • #28 gtk_propagate_event
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtkmain.c line 2624
  • #29 gtk_main_do_event
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtkmain.c line 1894
  • #30 gdk_event_source_dispatch
    at /build/buildd/gtk+3.0-3.1.12/./gdk/x11/gdkeventsource.c line 360
  • #31 g_main_dispatch
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 2439
  • #32 g_main_context_dispatch
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3008
  • #33 g_main_context_iterate
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3086
  • #34 g_main_loop_run
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3294
  • #35 gtk_dialog_run
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtkdialog.c line 1110
  • #36 ldsm_notify_for_mount
    at gsd-disk-space.c line 405
  • #37 ldsm_maybe_warn_mounts
    at gsd-disk-space.c line 640
  • #38 ldsm_check_all_mounts
    at gsd-disk-space.c line 725
  • #39 g_timeout_dispatch
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3904
  • #40 g_main_dispatch
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 2439
  • #41 g_main_context_dispatch
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3008
  • #42 g_main_context_iterate
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3086
  • #43 g_main_loop_run
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3294
  • #44 gtk_main
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtkmain.c line 1367
  • #45 main
    at main.c line 451

Comment 1 Bastien Nocera 2011-09-01 09:45:11 UTC
commit d994a0a0b1a7cb56a7214e9260eda280653d26ac
Author: Bastien Nocera <hadess@hadess.net>
Date:   Thu Sep 1 10:43:38 2011 +0100

    housekeeping: NULL-terminate the ignore-paths array
    
    Otherwise crashy crashy.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=657849