housekeeping: NULL-terminate the ignore-paths array

Otherwise crashy crashy.

https://bugzilla.gnome.org/show_bug.cgi?id=657849